--- a/website/index.html
+++ b/website/index.html
@@ -3,16 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
+  <title>Homepage</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="WebVisualizations/style.css">
-  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <link rel="stylesheet" href="pages/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
   <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" id="sitetitle" href="index.html"><h4>Weather Project</h4></a>
+    <a class="navbar-brand" id="sitetitle" href="index.html"><h4>NBA Project</h4></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
       aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,41 +23,33 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false"><b>Plots</b></a>
-            <span class="sr-only">(current)</span>
-            <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-              <a class="dropdown-item" href="WebVisualizations/vis1.html">Maximum Temperature</a>
-              <a class="dropdown-item" href="WebVisualizations/vis2.html">Humidity</a>
-              <a class="dropdown-item" href="WebVisualizations/vis3.html">Cloudiness</a>
-              <a class="dropdown-item" href="WebVisualizations/vis4.html">Wind Speed</a>
-            </div>
-          </a>
+          <a class="nav-link" id="woosh" href="index.html"><b>Home</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="WebVisualizations/Comparisons.html">Comparisons</a>
+          <a class="nav-link" id="woosh" href="pages/Dashboard.html"><b>Dashboard</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="WebVisualizations/Predictions.html">Game Predictions</a>
+          <a class="nav-link" id="woosh" href="pages/Predictions.html"><b>Model Predictions</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="WebVisualizations/Data.html">Data</a>
+          <a class="nav-link" id="woosh" href="pages/Data.html"><b>Game Log</b></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" id="woosh" href="pages/Debrief.html"><b>Debrief</b></a>
         </li>
         </li>
       </ul>
     </div>
 </nav>
 
-<!--/.Navbar -->
-
 <div class="container">
   <div class="row">
         <div class="col-lg-12">
           <div class="box red">
-            <h1>Machine Learning Scoring Predictions</h1>
-            <h6 align="center"><i>How Do The Public Advanced Metrics Stack Up?</i></h6>
+            <h1>Machine Learning Scoring Predictions and The Sportsbook Market</h1>
+            <h6 align="center"><i>What is the Best Way to Predict Future Scores Based on Past Data?</i></h6>
             <br>
-            <img src="WebVisualizations/Resources/assets/images/Fig1.png" class="img-fluid artimage" alt="Responsive image" align="center"><img>
+            <img src="pages/Resources/assets/images/Fig1.png" class="img-fluid artimage" alt="Responsive image" align="center"><img>
             <p>The purpose of this project was to analyze several different weather variables and their relationship to latitude. We looked at the maximum temperature, humidity, cloudiness and wind speed from a random sample of approximately 550 cities across the globe to see how position relative to the equator has on weather desirabilty. We used the citipy module to generate our sample cities and the OpenWeatherMap API to gather our weath data on each city. Overall, we found that as cities move further away from the equator, the more their maximum temperature drops. All other weather events we looked at had weak relationships to latitude.
               Weather continues to be a highly variable process influenced by a multitude of different variables.  
             </p>
@@ -65,10 +60,6 @@
 
 
 </div>
-  
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+</body>
 
 </html>
