--- a/website/pages/Dashboard.html
+++ b/website/pages/Dashboard.html
@@ -33,6 +33,7 @@
       <li class="nav-item active">
         <a class="nav-link" id="woosh" href="Predictions.html"><b>Model Predictions</b></a>
       </li>
+      
       <li class="nav-item active">
         <a class="nav-link" id="woosh" href="Data.html"><b>Game Log</b></a>
       </li>
@@ -50,9 +51,10 @@
   <div class="row">
         <div class="col-lg-12">
           <div class="box purp">
-            <h1 style="text-align: center;">Data Table</h1>
-            <p style="text-align: center;"> The following table will include every game and their Four Factors, Pace, Score Reality, the model predictions, the market conditions
-            and the associated errors. As well as a Grading Column.</p>
+            <h1 style="text-align: center;">Dashboard</h1>
+            <p style="text-align: center;"> Below Will Include Market Line Graph of Random Walk of Winnings, A Table of Book Records
+            A Table Team Summary For the Season (Spread Average, Scoring, FF, Pace, Record, Cover Record) and a Button to Go To Game Log with Specific Season Filter.
+            </p>
             <div class="table-responsive-xl">
             <table border="2" class="table table-striped table-hover">
             </table>
