--- a/website/pages/Data.html
+++ b/website/pages/Data.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <title>Game Log</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  
   <link rel="stylesheet" href="style.css">
-  <script src="data.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="gamelog.js"></script>
   
 </head>
 
@@ -46,24 +47,24 @@
 
 <!--/.Navbar -->
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
         <div class="col-lg-12">
           <div class="box purp">
             <h1 style="text-align: center;">Data Table</h1>
             <p style="text-align: center;"> The following table will include every game and their Four Factors, Pace, Score Reality, the model predictions, the market conditions
             and the associated errors. As well as a Grading Column.</p>
-            <div class="table-responsive-xl">
-            <table border="2" class="table table-striped table-hover">
-            </table>
-          </div>
+            
         </div>
   </div>
 </div>
+</div>-->
 
-
+<div class="container-fluid" id="scoresTable" style="background-color: rgba(102,51,153,0.62);">
+  <h1 style="color:white">Game Log</h1>
+  <p style="color:white" align="center"></p>
+  <div class="row" id="predRow"></div>
 </div>
-  
 </body>
 
 </html>
