--- a/website/pages/Dashboard.html
+++ b/website/pages/Dashboard.html
@@ -6,11 +6,13 @@
   <title>Game Log</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <script src="data.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.2"></script>
+  <script src="dashboard.js"></script>
+  
   
 </head>
 
@@ -50,14 +52,9 @@
 <div class="container">
   <div class="row">
         <div class="col-lg-12">
-          <div class="box purp">
+          <div class="box purp" id="dashboard">
             <h1 style="text-align: center;">Dashboard</h1>
-            <p style="text-align: center;"> Below Will Include Market Line Graph of Random Walk of Winnings, A Table of Book Records
-            A Table Team Summary For the Season (Spread Average, Scoring, FF, Pace, Record, Cover Record) and a Button to Go To Game Log with Specific Season Filter.
-            </p>
-            <div class="table-responsive-xl">
-            <table border="2" class="table table-striped table-hover">
-            </table>
+            
           </div>
         </div>
   </div>
