Added Sample Game Boilerplate HTML

--- a/website/index.html
+++ b/website/index.html
@@ -35,6 +35,9 @@
           <a class="nav-link" id="woosh" href="pages/Data.html"><b>Game Log</b></a>
         </li>
         <li class="nav-item active">
+          <a class="nav-link" id="woosh" href="Game.html"><b>Sample Game</b></a>
+        </li>
+        <li class="nav-item active">
           <a class="nav-link" id="woosh" href="pages/Debrief.html"><b>Debrief</b></a>
         </li>
         </li>
