--- a/website/pages/Debrief.html
+++ b/website/pages/Debrief.html
@@ -36,6 +36,9 @@
         <a class="nav-link" id="woosh" href="Data.html"><b>Game Log</b></a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" id="woosh" href="Game.html"><b>Sample Game</b></a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" id="woosh" href="Debrief.html"><b>Debrief</b></a>
       </li>
       </li>
