--- a/website/pages/Game.html
+++ b/website/pages/Game.html
@@ -37,7 +37,7 @@
           <a class="nav-link" id="woosh" href="Data.html"><b>Game Log</b></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" id="woosh" href="Game.html"><b>Sample Game</b></a>
+            <a class="nav-link" id="woosh" href="Game.html"><b>Sample Game</b></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" id="woosh" href="Debrief.html"><b>Debrief</b></a>
@@ -56,18 +56,18 @@
   <form>
     <div class="row">
       <div class="col">
-        <select id="YearSelect" type="text" class="form-control form-control-sm" style="margin-bottom: 25px;" placeholder="2020">
-          <option>2020</option>
+        <select id="YearSelect" type="text" class="form-control form-control-sm" style="margin-bottom: 25px;" placeholder="2020"></select>
+          <!-- Seasons Filter -->
+          <!--<option>2020</option>
           <option>2019</option>
           <option>2018</option>
           <option>2017</option>
           <option>2016</option>
-          <option>2015</option>
-        </select>
+          <option>2015</option>-->
       </div>
       <div class="col">
         <select id="WeekSelect" type="text" class="form-control form-control-sm" style="margin-bottom: 25px;" >
-          <option>1</option>
+          <!--<option>1</option>
           <option>2</option>
           <option>3</option>
           <option>4</option>
@@ -87,7 +87,7 @@
           <option>18</option>
           <option>19</option>
           <option>20</option>
-          <option>21</option>
+          <option>21</option>-->
         </select>
       </div>
       <!--<div class="col">
@@ -103,7 +103,7 @@
 
 <!--/SCORES AND PREDITS-->
 <div class="container" id="ScoresTable" style="background-color: rgba(102,51,153,0.62);">
-      <h1 style="color:white">Model Predictions</h1>
+      <h1 style="color:white">Game #500</h1>
       <p style="color:white" align="center"></p>
       <div class="row" id="predRow"></div>
 </div>
