--- a/website/pages/Dashboard.html
+++ b/website/pages/Dashboard.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Game Log</title>
+  <title>Dashboard</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -51,17 +51,6 @@
 </nav>
 
 <!--/.Navbar -->
-
-<div class="container">
-  <div class="row">
-        <div class="col-lg-12">
-          <div class="box purp" id="dashboard">
-            <h1 style="text-align: center;">Dashboard</h1>
-            
-          </div>
-        </div>
-  </div>
-</div>
 
 
 </div>
