--- a/website/pages/Dashboard.html
+++ b/website/pages/Dashboard.html
@@ -11,6 +11,7 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.2"></script>
+  <script src="https://cdn.plot.ly/plotly-2.6.3.min.js"></script>
   <script src="dashboard.js"></script>
   
   
